--- a/src/app/inventory/add-interactions/add-interactions.component.html
+++ b/src/app/inventory/add-interactions/add-interactions.component.html
@@ -31,7 +31,7 @@
                     *ngIf="addInventoryForm.get('ticketType').touched && addInventoryForm.get('ticketType').errors?.required"
                     class="text-danger">
                     <!-- {{'PLEASE_SELECT_COUNTRY' | translate}} -->
-                    Please select ticket type
+                    Please select ticket type.
                 </mat-error>
             </div>
         </div>
@@ -50,7 +50,7 @@
                     *ngIf="addInventoryForm.get('statusId').touched && addInventoryForm.get('statusId').errors?.required"
                     class="text-danger">
                     <!-- {{'PLEASE_SELECT_COUNTRY' | translate}} -->
-                    Please select Interaction status
+                    Please select Interaction status.
                 </mat-error>
             </div>
         </div>
@@ -67,7 +67,7 @@
                 <mat-error [dir]="langDir"
                     *ngIf="addInventoryForm.get('subStatusId').touched && addInventoryForm.get('subStatusId').errors?.required"
                     class="text-danger">
-                    Please select sub status
+                    Please select sub status.
                 </mat-error>
             </div>
         </div>
@@ -83,7 +83,7 @@
                 <mat-error [dir]="langDir"
                     *ngIf="addInventoryForm.get('priority').touched && addInventoryForm.get('priority').errors?.required"
                     class="text-danger">
-                    Please select priority
+                    Please select priority.
                 </mat-error>
             </div>
         </div>
@@ -104,7 +104,7 @@
                 <mat-error [dir]="langDir"
                     *ngIf="addInventoryForm.get('categoryId').touched && addInventoryForm.get('categoryId').errors?.required"
                     class="text-danger">
-                    Please select category
+                    Please select category.
                 </mat-error>
             </div>
         </div>
@@ -126,7 +126,7 @@
                 <mat-error [dir]="langDir"
                     *ngIf="addInventoryForm.get('subcategoryId').touched && addInventoryForm.get('subcategoryId').errors?.required"
                     class="text-danger">
-                    Please select sub Category
+                    Please select sub Category.
                 </mat-error>
             </div>
         </div>
@@ -145,7 +145,7 @@
                     *ngIf="addInventoryForm.get('gstn').touched && addInventoryForm.get('gstn').errors?.minlength"
                     class="text-danger">
                     <!-- {{'PLEASE_SELECT_COUNTRY' | translate}} -->
-                    Please enter valid GSTIN/ARN/TRN/UN
+                    Please enter valid GSTIN/ARN/TRN/UN.
                 </mat-error>
             </div>
         </div>
@@ -163,7 +163,7 @@
                     *ngIf="addInventoryForm.get('teamId').touched && addInventoryForm.get('teamId').errors?.required"
                     class="text-danger">
                     <!-- {{'PLEASE_SELECT_COUNTRY' | translate}} -->
-                    Please select created team
+                    Please select created team.
                 </mat-error>
             </div>
         </div>
@@ -182,7 +182,7 @@
                     *ngIf="addInventoryForm.get('errorCode').touched && addInventoryForm.get('errorCode').errors?.required"
                     class="text-danger">
                     <!-- {{'PLEASE_SELECT_COUNTRY' | translate}} -->
-                    Please select error message
+                    Please select error message.
                 </mat-error>
             </div>
         </div>
@@ -198,7 +198,7 @@
                 <mat-error [dir]="langDir"
                     *ngIf="addInventoryForm.get('source').touched && addInventoryForm.get('source').errors?.required"
                     class="text-danger">
-                    Please select source
+                    Please select source.
                 </mat-error>
             </div>
         </div>
@@ -227,7 +227,7 @@
                 <mat-error [dir]="langDir"
                     *ngIf="addInventoryForm.get('problemReported1').touched && addInventoryForm.get('problemReported1').errors?.required"
                     class="text-danger">
-                    Please enter problem reported
+                    Please enter problem reported.
                 </mat-error>
             </div>
         </div>
@@ -238,12 +238,12 @@
                 <mat-error [dir]="langDir"
                     *ngIf="addInventoryForm.get('agentRemarks').touched && addInventoryForm.get('agentRemarks').errors?.required"
                     class="text-danger">
-                    Please enter agent remarks
+                    Please enter agent remarks.
                 </mat-error>
                 <mat-error [dir]="langDir"
                     *ngIf="addInventoryForm.get('agentRemarks').touched && addInventoryForm.get('agentRemarks').errors?.minlength"
                     class="text-danger">
-                    Please enter remarks more then 10 words
+                    Please enter remarks more then 10 words.
                 </mat-error>
             </div>
         </div>
