--- a/src/app/queue/queue/queue.component.html
+++ b/src/app/queue/queue/queue.component.html
@@ -12,6 +12,9 @@
                 Add Team
             </button>
         </div>
+        <button type="button" (click)="downloadExcel()" class="btn btn-warning btn-md button-margin ml-2"><i
+            class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
+        </button>
     </div>
 </div>
 
