--- a/src/app/customer/customer-list/customer-list.component.html
+++ b/src/app/customer/customer-list/customer-list.component.html
@@ -24,7 +24,7 @@
                     <h1>Searching Filter</h1>
                 </div>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-8">
                 <div class="form-group">
                     <mat-label for="search">Search</mat-label>
                     <input (keyup.enter)="searchList()" type="text" [(ngModel)]="search" placeholder="search by id, name, mobile, email"
@@ -32,7 +32,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <div class="d-flex justify-content-end">
                     <button type="button" (click)="searchList()" class="btn btn-success btn-md mx-2 button-margin"><i
                             class="fas fa-save"></i>
@@ -40,6 +40,9 @@
                     <button type="button" (click)="onClear();" class="btn btn-danger btn-md button-margin"><i
                             class="fas fa-times-circle"></i>
                         Clear </button>
+                        <button type="button" (click)="downloadExcel()" class="btn btn-warning btn-md button-margin ml-2"><i
+                            class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
+                        </button>
                 </div>
             </div>
         </div>
@@ -63,12 +66,20 @@
             <th class="table-column-150" mat-header-cell *matHeaderCellDef>Action
             </th>
             <td class="table-column-150" mat-cell *matCellDef="let element">
+                <!-- <button *hasClaim="['CNT_UPDATE_CONTACT']" (click)="editCustomer(element.id)"
+                    class="btn btn-success btn-sm m-right-10" type="button">
+                    <i class="las la-pen"></i>
+                    {{'EDIT' | translate}}
+                </button>
+                <button *hasClaim="'CNT_DELETE_CONTACT'" class="btn btn-danger btn-sm" type="button"
+                    (click)="deleteCustomer(element)">
+                    <i class="las la-trash"></i>
+                    {{'DELETE' | translate}}
+                </button> -->
                 <mat-icon class="interButtonIcons" *hasClaim="'CNT_UPDATE_CONTACT'"
                 (click)="editCustomer(element.id)">edit</mat-icon>
             <mat-icon class="interButtonIcons" *hasClaim="'CNT_DELETE_CONTACT'"
             (click)="deleteCustomer(element)">delete</mat-icon>
-
-
             </td>
         </ng-container>
         <ng-container matColumnDef="customerName">
@@ -134,7 +145,7 @@
         <ng-container matColumnDef="footer">
             <td mat-footer-cell colspan="8" *matFooterCellDef>
                 <mat-paginator [length]="customerResource.totalCount" [pageSize]="customerResource.pageSize"
-                    [pageSizeOptions]="[10, 20, 30]">
+                    [pageSizeOptions]="[10, 20, 30,50]">
                 </mat-paginator>
             </td>
         </ng-container>
