--- a/src/app/inventory/inventory-list/inventory-list.component.html
+++ b/src/app/inventory/inventory-list/inventory-list.component.html
@@ -103,13 +103,16 @@
                 </mat-select>
             </div>
         </div> -->
-        <div class="col-md-3">
+        <div class="col-md-4">
             <button type="button" (click)="searchList()" class="btn btn-success btn-md mx-2 button-margin"><i
                     class="fas fa-save"></i>
                 Search</button>
             <button type="button" (click)="onClear();" class="btn btn-danger btn-md button-margin"><i
                     class="fas fa-times-circle"></i>
                 Clear </button>
+                <button type="button" class="btn btn-warning btn-md button-margin ml-2"><i
+                    class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
+                </button>
         </div>
     </div>
 </div>
