--- a/src/app/customer/customer-interactions/customer-interactions.component.html
+++ b/src/app/customer/customer-interactions/customer-interactions.component.html
@@ -61,7 +61,7 @@
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>
                     Interaction Status
                 </th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.statusName}}</td>
+                <td class="table-column-150" [ngClass]="row?.statusName=='CLOSED'?'closed':(row?.statusName=='OPEN'||row?.statusName=='Open'?'open':row?.statusName=='PENDING'?'pending':'resolved')" mat-cell *matCellDef="let row"> <span class="text-uppercase">{{row?.statusName}}</span></td>
             </ng-container>
             <ng-container matColumnDef="substatus">
                 <th class="table-column-250" mat-header-cell *matHeaderCellDef mat-sort-header>Interaction Sub status</th>
@@ -104,8 +104,8 @@
                 </td>
             </ng-container>
             <ng-container matColumnDef="lastresolveat">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Last Resolved At</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.lastResolvedAt | date:'dd-MM-yyyy'}}
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Created At</th>
+                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.createdAt}}
                 </td>
             </ng-container>
 
