--- a/src/app/problem/problem/problem.component.html
+++ b/src/app/problem/problem/problem.component.html
@@ -20,12 +20,12 @@
         <ng-container matColumnDef="action">
             <th class="table-column-200" mat-header-cell *matHeaderCellDef>{{'ACTION' | translate}} </th>
             <td class="table-column-200" mat-cell *matCellDef="let element">
-                <button *hasClaim="'MST_UPDATE_CATEGORY'" (click)="manageStatus(element)"
+                <button *hasClaim="'MST_EDIT_PROBLEM'" (click)="manageStatus(element)"
                     class="btn btn-success btn-sm m-right-10" type="button">
                     <i class="las la-pen"></i>
                     {{'EDIT' | translate}}
                 </button>
-                <button *hasClaim="'MST_DELETE_CATEGORY'" (click)="deleteProblem(element)" class="btn btn-danger btn-sm"
+                <button *hasClaim="'MST_DELETE_PROBLEM'" (click)="deleteProblem(element)" class="btn btn-danger btn-sm"
                     type="button">
                     <i class="las la-trash"></i>
                     {{'DELETE' | translate}}
@@ -41,8 +41,8 @@
             <td class="table-column-200" mat-cell *matCellDef="let element">{{element?.isEnabled?'Active':'In Active'}} </td>
         </ng-container>
         <ng-container matColumnDef="id">
-            <th class="table-column-100" mat-header-cell *matHeaderCellDef>Id </th>
-            <td class="table-column-100" mat-cell *matCellDef="let element">{{element?.id}}</td>
+            <th class="table-column-200" mat-header-cell *matHeaderCellDef>Problem Id </th>
+            <td class="table-column-200" mat-cell *matCellDef="let element">{{element?.problemId}}</td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay;sticky: true"></tr>
         <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
