--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -371,7 +371,7 @@
             </a>
           </li>
           <li class="nav-item" *hasClaim="'MST_VIEW_CATEGORY'">
-            <a [routerLink]="['/calender']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
+            <a [routerLink]="['/calendar']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
               class="nav-link">
               <i class="far fa-list-alt nav-icon"></i>
               <p>Calender Master</p>
